# GMPI-plugins

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: c-cpp.yml
adaptors/: CMakeLists.txt
adaptors/Shared/: BundleInfo.cpp  DirectXGfx.h  Drawing.h  DrawingFrame_win32.cpp  DrawingFrame_win32.h  Drawing_API.h  FileFinder.cpp  FileFinder.h  FileWatcher.cpp  IGuiHost2.h  IPluginGui.cpp  MpString.h  MyTypeTraits.cpp  MyTypeTraits.h  PresetReader.h  ProcessorStateManager.cpp  ProcessorStateManager.h  RawConversions.cpp  RawConversions.h  conversion.cpp  conversion.h  gmpi_gui_hosting.cpp  midi_defs.h  mp_api.h  mp_gui.h  mp_interface_wrapper.h  mp_sdk_audio.cpp  mp_sdk_audio.h  mp_sdk_common.h  mp_sdk_gui.cpp  mp_sdk_gui.h  mp_sdk_gui2.h  mp_sdk_guid.h  platform_string.h  unicode_conversion.h  xplatform.h
adaptors/Standalone/: Resource.h  Standalone.cpp  Standalone.sln  Standalone.vcxproj  Standalone.vcxproj.filters
adaptors/VST3/: BundleInfo.cpp  BundleInfo.h  CMakeLists.txt  CocoaGuiHost.h  Cocoa_Gfx.h  ContainerView.cpp  ContainerView.h  Controller.cpp  Controller.h  ControllerHost.h  DirectXGfx.cpp  DirectXGfx.h  Drawing.h  DrawingFrame_win32.cpp  DrawingFrame_win32.h  Drawing_API.h  FileFinder.cpp  FileWatcher.cpp  FileWatcher.h  HostControls.cpp  HostControls.h  IModelBase.h  IPluginGui.h  IViewChild.h  MpParameter.cpp  MpParameter.h  MyTypeTraits.h  MyVstPluginFactory.cpp  MyVstPluginFactory.h  PatchCables.h  Presenter.h  RawConversions.cpp  RawConversions.h  SEVSTGUIEditorMac.cpp  SEVSTGUIEditorMac.h  SEVSTGUIEditorWin.cpp  SEVSTGUIEditorWin.h  StagingMemoryBuffer.h  SynthEditCocoaView.mm  TimerManager.cpp  (+27 more)
adaptors/common/: Controller.cpp  Controller.h  ControllerHost.h  GmpiResourceManager.cpp  GmpiResourceManager.h  MpParameter.cpp  MpParameter.h  dynamic_linking.cpp  dynamic_linking.h  platform_plugin.cpp
plugins/: CMakeLists.txt
plugins/AGraphics/: AGraphics.cpp  AGraphics.xml  AGraphicsGui.cpp  CMakeLists.txt
plugins/FreqAnalyser/: CMakeLists.txt  FreqAnalyser.cpp  FreqAnalyser.xml  FreqAnalyserGui.cpp
plugins/Gain/: CMakeLists.txt  Gain.cpp  Gain.synthedit
plugins/GainGui/: CMakeLists.txt  Gain.cpp  GainGui.cpp  drawKnob.h
plugins/SawDemo/: CMakeLists.txt  README.md
plugins/SawDemo/src/: SawDemo.cpp  SawDemo.h  SawDemoGui.cpp  drawSlider.h  gmpi-saw-demo-editor.cpp  gmpi-saw-demo.cpp  gmpi-saw-demo.h
plugins/TestDatatypes/: CMakeLists.txt  TestDatatypes.cpp
plugins_c/: CMakeLists.txt
plugins_c/AGain/: AGain.c  CMakeLists.txt  Factory.c
